configured Jest with @swc/jest and add .swcrc for JSX support

--- a/react-todo/.swcrc
+++ b/react-todo/.swcrc
@@ -1,15 +1,22 @@
 
 {
   "jsc": {
-    "target": "es2020",
+    "parser": {
+      "syntax": "ecmascript",
+      "jsx": true
+    },
     "transform": {
       "react": {
+        // Use React 17+ "automatic" runtime so you don't need `import React`
         "runtime": "automatic",
-        "useBuiltins": true
+        "development": true,
+        "refresh": false
       }
-    }
+       },
+    "target": "es2020"
   },
   "module": {
-    "type": "es6"
-  }
+    "type": "commonjs"
+  },
+  "sourceMaps": true
 }
